# MiptAaDS

./: .gitigore  README.md
2022/Algo1term/: README.md
2022/Algo1term/DTIC/: CMakeLists.txt  Fenwick.hpp  README.md  TreapWithImplicitKeyTest.cpp
2022/Algo1term/Hash/: HashMap.hpp
2022/Algo1term/LRUcache/: LRU.cpp  (+2 more)
2022/GraphAlgo/: Kosaraju.cpp  Kruskal.cpp
2022/c++/: README.md
2023/: Algo2SemICT
2023/Algo4SemICE/: AhoKorasik.cpp  README.md  SuffixArray.cpp  SuffixAutomaton.cpp  kmp.cpp
2023/AlgoGraph2Term/: README.md
2023/AlgoICT2Sem/: README.md  avl_tree.cpp  heap.c  qsort_median.c
2023/TechProg/: README.md
2023/TechProg/OwnLibrary/: CMakeLists.txt  README.md  calc.cpp  calc.hpp  main.cpp  test.cpp
2023/TechProg/OwnLibrary/mylib/: CMakeLists.txt  a_xor_b.cpp  a_xor_b.hpp
2024/HSSE2024/: geometry.cpp
2024/Seminars/: SplayTree.cpp
Algo1term/: DTREADME.md  README.md
Algo1term/AVL/: avl.cpp  avl2.cpp
Algo1term/DTIC/: FenwickTest.cpp  TreapWithImplicitKey.hpp
Algo1term/Hash/: CMakeLists.txt  HashMapTests.cpp
Algo1term/Heap/: Heap.cpp
Algo1term/LRUcache/: CMakeLists.txt  LRU.hpp  LRUtests.cpp
Algo1term/SparseTable/: CMakeLists.txt
Algo1term/Treap/: CMakeLists.txt  test.cpp  treap.cpp
SparseTable/: CMakeLists.txt  README.md  Sparse.cpp  SparseTests.cpp
c++/: README.md
c++/Classes/: Abstract.cpp  MoveSemantics+5rule.cpp  RuleOf3.cpp  StreamsOverloading+PossibleStreamIMPL.cpp  TemplateClass+Inheritance.cpp  VariadicTemplateFunctionIfConstexpr.cpp  VectorAndContiguosIterator.cpp
c++/ThreadPool/: tp.cpp
c++/TupleXD/: tuple.cpp
(+65 files in other folders)
